# not-so-smart

./: .ocamlformat  nss.opam
fuzz/: dune  fuzz.ml
lib/: decoder.ml  decoder.mli  default.ml  dune  fetch.ml  fetch.mli  find_common.ml  git.ml  git.mli  neg.ml  neg.mli  pck.ml  pck.mli  protocol.ml  protocol.mli  push.ml  push.mli  sigs.ml  sigs.mli  smart.ml  smart.mli  smart_git.ml  smart_git.mli  state.ml  state.mli
test/: dune  loopback.ml  test.ml  unix_backend.ml
