opam-version: "2.0"
name:         "nss"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/decompress"
bug-reports:  "https://github.com/mirage/decompress/issues"
dev-repo:     "git+https://github.com/mirage/decompress.git"
doc:          "https://mirage.github.io/decompress/"
license:      "MIT"
synopsis:     "Not So Smart - Implementation of Smart protocol"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"       {>= "4.07.0"}
  "dune"
  "rresult"
  "domain-name"
  "astring"
  "fmt"
  "logs"
  "psq"
  "carton-lwt"
  "conduit-lwt"
  "uri"
  "digestif"
  "emile"
]
