(library
 (name smart)
 (modules smart filter capability state protocol encoder decoder)
 (libraries rresult bigstringaf domain-name astring fmt))

(library
 (name sigs)
 (modules sigs)
 (libraries cstruct))

(library
 (name neg)
 (modules neg find_common default)
 (libraries sigs logs psq cstruct smart))

(library
 (name pck)
 (modules pck)
 (libraries sigs psq))
